# web-frameworks-benchmark

./: .gitignore  README.md
book-database/: README.md  pom.xml
book-deploy/: README.md  docker-compose.yml
book-metabase/: docker-compose.yml
book-performance-tests/: pom.xml
ms-book-dotnet-entity-framework/: Dockerfile  Program.cs  README.md  docker-compose.yml  ms-book-dotnet-entity-framework.csproj
ms-book-go-mux-gorm/: .gitignore  Dockerfile  docker-compose.yml  go.mod  go.sum  main.go
ms-book-helidon-rest-jdbc/: .gitignore  .helidon  Dockerfile  Dockerfile.jlink  Dockerfile.native  README.md  docker-compose.yml  pom.xml
ms-book-java-without-framework/: Dockerfile  README.md  docker-compose.yml  pom.xml
ms-book-micronaut-reactive/: Dockerfile  README.md  dependency-reduced-pom.xml  docker-compose.yml  micronaut-cli.yml  pom.xml
ms-book-micronaut-rest-jdbc/: .gitignore  Dockerfile  README.md  dependency-reduced-pom.xml  docker-compose.yml  micronaut-cli.yml  pom.xml
ms-book-quarkus-reactive/: Dockerfile  README.md  docker-compose.yml  pom.xml
ms-book-quarkus-rest-hibernate/: Dockerfile  README.md  docker-compose.yml  pom.xml
ms-book-quarkus-rest-jdbc/: .gitignore  README.md  docker-compose.yml  pom.xml
ms-book-rust-actix-diesel/: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml
ms-book-rust-actix-diesel/old/: actors.rs  db_models.rs  db_utils.rs  main.rs  messages.rs  schema.rs  services.rs
ms-book-rust-actix-diesel/src/: db.rs  main.rs
ms-book-rust-actix-diesel/src/books/: model.rs  routes.rs
(+160 files in other folders)
