[package]
name = "ms-book-rust-actix-diesel"
version = "0.1.0"
authors = ["Joel Silva <joeltadeu@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "3.0"
actix-rt = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.11"
diesel = { version = "1.4", features = ["mysql", "r2d2", "uuid", "chrono"] }
env_logger = "0.6"
lazy_static = "1.4"
listenfd = "0.3"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
r2d2 = "0.8"
uuid = { version = "0.6", features = ["serde", "v4"] }